# InterAtomicInteraction

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  atom.cpp  atom.h  atom.hpp  graph.py  input_data.json  inter_atomic.sh  lattice.cpp  lattice.h  main.cpp  matrix3D.hpp  optimized_params.json  optimizer.cpp  optimizer.h  parameters.h  plot_data.cpp  solver.cpp  solver.h  table_estimator.cpp  table_estimator.h  vector3D.hpp
test/: CMakeLists.txt  test-atomic.cpp
